ProtoXmlPullParser: remove usage of Trove4J
Trove4J is deprecated (b/357843093) and the alternative 'fastutil'
library is 20 MB (not quite worth having in sdk-common).

Bug: 357843093
Test: ProtoXmlPullParserTest
Change-Id: I9261054b7ba2d88063471c9212236f3e701b93df